# eds

./: .gitignore  README.md  pyproject.toml
app/: data.py  hello.py  main.py  models.py  web.py
data/: explorer.py
fake/: explorer.py
service/: creature.py  explorer.py
src/: auth.py  error.py  main.py
src/data/: creature.py  employeer.py  explorer.py  init.py  signature.py  user.py
src/fake/: creature.py  employeer.py  signature.py  user.py
src/model/: employeer.py  signature.py
src/models/: employeer.py  signature.py  user.py
src/router/: employeer.py  signature.py  user.py
src/routers/: employeer.py  signature.py  user.py
src/service/: creature.py  employeer.py  signature.py  user.py
src/test/unit/data/: test_creature.py
src/test/unit/service/: test_creature.py  test_user.py
src/test/unit/web/: test_creature.py
src/web/: creature.py  user.py
test/unit/data/: test_creature.py
test/unit/service/: test_creature.py
web/: creature.py  explorer.py
