[tool.poetry]
name = "eds"
version = "0.1.0"
description = ""
authors = ["tmutarakan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.114.0"}
uvicorn = "^0.30.6"
httpie = "^3.2.3"
httpx = "^0.27.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
