[tool.poetry]
name = "eds"
version = "0.1.0"
description = "electronic digital signature"
authors = ["tmutarakan <ratibor.tmutarakansky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.2"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
databases = {extras = ["asyncpg"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
